k8s/deployments/logstash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  labels:
    app: logstash
  namespace: aone-stage
spec:
  replicas: 1
  template:
    metadata:
      name: logstash
      labels:
        app: logstash
    spec:
      containers:
        - name: logstash
          image: asia-south2-docker.pkg.dev/middleware-test-339406/images/ajex/ajex-aone-logstash:1.2.0
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: logstash
