k8s/deployments/test-pod-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-configmap
spec:
  containers:
  - name: test-alpine
    image: alpine
    command: ["/bin/sh","-c","env; sleep 600"]
