k8s/deployments/config-server.yaml

##########在集群中创建命名空间###############
---
apiVersion: v1
kind: Namespace
metadata:
  name: zstest

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
#  kubernetes.io/ingress.global-static-ip-name: saas-bsp-gw-service-service-ip
#  networking.gke.io/managed-certificates: "saas-bsp-gw-service"
#  kubernetes.io/ingress.class: "gce"
#  kubernetes.io/ingress.allow-http: "true"
  name: config-server-ingress
  namespace: zstest
spec:
  defaultBackend:
    service:
      name: config-server
      port:
        number: 8071
  rules:
  - host: config.zs.com
    http:
      paths:
      - backend:
          serviceName: config-server
          servicePort: 8071
        path: /*
        pathType: ImplementationSpecific
